--- a/Proyecto/src/com/frutilla/config/config.properties
+++ b/Proyecto/src/com/frutilla/config/config.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://<host>:3306/<db_name>
+db.url=jdbc:mysql://miprimerbd.crsw6ksoerj8.us-east-1.rds.amazonaws.com:3306/frutillaCorp
 db.user=admin
-db.password=labs1inf3020241
+db.password=frutilla#123
