--- a/Proyecto/CRUD/InventarioController/InventarioController/nbproject/project.properties
+++ b/Proyecto/CRUD/InventarioController/InventarioController/nbproject/project.properties
@@ -77,6 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=frutillaCRUD
+main.class=com.frutilla.Inventario.main.Principal
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
