--- a/Proyecto/CRUD/InventarioController/InventarioController/nbproject/project.properties
+++ b/Proyecto/CRUD/InventarioController/InventarioController/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/frutillaCRUD
 endorsed.classpath=
 excludes=
 file.reference.Inventario.jar=src\\com\\frutilla\\inventario\\lib\\Inventario.jar
+file.reference.Local.jar=src\\com\\frutilla\\Inventario\\lib\\Local.jar
 file.reference.mysql-connector-j-8.4.0.jar=src\\com\\frutilla\\config\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.Inventario.jar}
+    ${file.reference.Inventario.jar}:\
+    ${file.reference.Local.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
