--- a/Frutilla/FrutillaPersistencia/pom.xml
+++ b/Frutilla/FrutillaPersistencia/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.mycompany</groupId>
+        <groupId>pe.edu.pucp</groupId>
         <artifactId>Frutilla</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.frutilla</groupId>
     <artifactId>FrutillaPersistencia</artifactId>
     <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>com.frutilla.Persistencia</exec.mainClass>
+        <exec.mainClass>pe.edu.pucp.frutilla.Persistencia</exec.mainClass>
     </properties>
     <dependencies>
     <dependency>
@@ -41,6 +40,12 @@
         <version>2.0.12</version>
         <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>pe.edu.pucp</groupId>
+            <artifactId>FrutillaDominio</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <name>FrutillaPersistencia</name>
