Generacion de Proyecto de Logica de Negocio

--- a/Frutilla/pom.xml
+++ b/Frutilla/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>FrutillaDominio</module>
         <module>FrutillaPersistencia</module>
+        <module>FrutillaLogicaNegocio</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
