--- a/Frutilla/FrutillaLogicaNegocio/pom.xml
+++ b/Frutilla/FrutillaLogicaNegocio/pom.xml
@@ -9,6 +9,18 @@
     <groupId>pe.edu.pucp.frutilla</groupId>
     <artifactId>FrutillaLogicaNegocio</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>pe.edu.pucp</groupId>
+            <artifactId>FrutillaDominio</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>pe.edu.pucp</groupId>
+            <artifactId>FrutillaPersistencia</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
