--- a/Frutilla/FrutillaPersistencia/pom.xml
+++ b/Frutilla/FrutillaPersistencia/pom.xml
@@ -29,12 +29,6 @@
         <artifactId>slf4j-api</artifactId>
         <version>2.0.12</version>
     </dependency>  
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>2.0.12</version>
-        <scope>test</scope>
-    </dependency>
         <dependency>
             <groupId>pe.edu.pucp</groupId>
             <artifactId>FrutillaDominio</artifactId>
@@ -46,20 +40,32 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.6.0</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>        
+        <!-- Base de datos en memoria H2 -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>5.6.0</version>
-            <scope>test</scope>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>2.1.214</version>
+          <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.0</version>
-            <scope>test</scope>
-        </dependency>
+        
     </dependencies>
+    
+    <build>
+        <plugins>
+          <!-- …otros plugins… -->
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M9</version>
+            <configuration>
+              <!-- Deshabilita el module-path para evitar problemas con el classpath de JUnit 5 -->
+              <useModulePath>false</useModulePath>
+            </configuration>
+          </plugin>
+        </plugins>
+  </build>
 
     <name>FrutillaPersistencia</name>
 </project>
