Cambios para inventario
RECORDAR QUE QUITE LOS CAMBIOS ASOCIADOS A DBMANAGER Y A LAS PROPIEDADES PORQUE LO PROBE A NIVEL LOCAL

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ desktop.ini
 /target/
 /Frutilla/FrutillaPersistencia/nbproject/
 /Frutilla/FrutillaLogicaNegocio/target/
+/Frutilla/FrutillaLogicaNegocio/nbproject/
