--- a/Frutilla/FrutillaPersistencia/pom.xml
+++ b/Frutilla/FrutillaPersistencia/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <artifactId>FrutillaPersistencia</artifactId>
     <packaging>jar</packaging>
+    
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -40,7 +41,19 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.6.0</version>
             <scope>test</scope>
-        </dependency>        
+        </dependency>   
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+          </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+          </dependency>     
         <!-- Base de datos en memoria H2 -->
         <dependency>
           <groupId>com.h2database</groupId>
@@ -48,7 +61,18 @@
           <version>2.1.214</version>
           <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
