--- a/Frutilla/pom.xml
+++ b/Frutilla/pom.xml
@@ -13,4 +13,49 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    
+     <build>
+        <plugins>
+          <!-- …otros plugins… -->
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M9</version>
+            <configuration>
+              <!-- Deshabilita el module-path para evitar problemas con el classpath de JUnit 5 -->
+              <useModulePath>false</useModulePath>
+            </configuration>
+          </plugin>
+        </plugins>
+  </build>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>   
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+          </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+          </dependency>     
+        <!-- Base de datos en memoria H2 -->
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>2.1.214</version>
+          <scope>test</scope>
+        </dependency>
+    </dependencies>
+  
 </project>
