--- a/Frutilla/FrutillaLogicaNegocio/pom.xml
+++ b/Frutilla/FrutillaLogicaNegocio/pom.xml
@@ -58,6 +58,7 @@
             <groupId>pe.edu.pucp</groupId>
             <artifactId>FrutillaPersistencia</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
