--- a/Frutilla/pom.xml
+++ b/Frutilla/pom.xml
@@ -27,9 +27,7 @@
                 
     
     <module>FrutillaLogicaNegocio</module>
-          
-    
-      
+    <module>FrutillaWS</module>
   </modules>
         
   
