--- a/Frutilla/FrutillaWS/pom.xml
+++ b/Frutilla/FrutillaWS/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>FrutillaLogicaNegocio</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
