--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/bin/LocalWebService.dll.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/bin/LocalWebService.dll.config
@@ -22,10 +22,10 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8080/LocalWS/LocalWS" binding="basicHttpBinding"
-        bindingConfiguration="LocalWSPortBinding" contract="FrutillaWS.LocalWS"
-        name="LocalWSPort" />
-      <endpoint address="http://localhost:8080/LocalWS/EmpleadoWS"
+      <endpoint address="http://localhost:8080/FrutillaWS/LocalWS"
+        binding="basicHttpBinding" bindingConfiguration="LocalWSPortBinding"
+        contract="LocalWS.LocalWS" name="LocalWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/EmpleadoWS"
         binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
         contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
     </client>
