--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Web.config
@@ -19,6 +19,7 @@
       <basicHttpBinding>
         <binding name="LocalWSPortBinding" />
         <binding name="EmpleadoWSPortBinding" />
+        <binding name="NotificacionWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -28,6 +29,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/EmpleadoWS"
         binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
         contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/NotificacionWS"
+        binding="basicHttpBinding" bindingConfiguration="NotificacionWSPortBinding"
+        contract="NotificionesWS.NotificacionWS" name="NotificacionWSPort" />
     </client>
   </system.serviceModel>
 </configuration>
