--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
@@ -125,6 +125,53 @@
     <Content Include="ListaVentasSupervisor.aspx" />
     <Content Include="LocalSupervisor.aspx" />
     <Content Include="Notificaciones\ListarNotificaciones.aspx" />
+    <Content Include="Public\css\bootstrap-grid.css" />
+    <Content Include="Public\css\bootstrap-grid.min.css" />
+    <Content Include="Public\css\bootstrap-grid.rtl.css" />
+    <Content Include="Public\css\bootstrap-grid.rtl.min.css" />
+    <Content Include="Public\css\bootstrap-reboot.css" />
+    <Content Include="Public\css\bootstrap-reboot.min.css" />
+    <Content Include="Public\css\bootstrap-reboot.rtl.css" />
+    <Content Include="Public\css\bootstrap-reboot.rtl.min.css" />
+    <Content Include="Public\css\bootstrap-utilities.css" />
+    <Content Include="Public\css\bootstrap-utilities.min.css" />
+    <Content Include="Public\css\bootstrap-utilities.rtl.css" />
+    <Content Include="Public\css\bootstrap-utilities.rtl.min.css" />
+    <Content Include="Public\css\bootstrap.css" />
+    <Content Include="Public\css\bootstrap.min.css" />
+    <Content Include="Public\css\bootstrap.rtl.css" />
+    <Content Include="Public\css\bootstrap.rtl.min.css" />
+    <Content Include="Public\css\site.css" />
+    <Content Include="Public\fonts\css\all.css" />
+    <Content Include="Public\fonts\css\all.min.css" />
+    <Content Include="Public\fonts\css\brands.css" />
+    <Content Include="Public\fonts\css\brands.min.css" />
+    <Content Include="Public\fonts\css\fontawesome.css" />
+    <Content Include="Public\fonts\css\fontawesome.min.css" />
+    <Content Include="Public\fonts\css\regular.css" />
+    <Content Include="Public\fonts\css\regular.min.css" />
+    <Content Include="Public\fonts\css\solid.css" />
+    <Content Include="Public\fonts\css\solid.min.css" />
+    <Content Include="Public\fonts\css\svg-with-js.css" />
+    <Content Include="Public\fonts\css\svg-with-js.min.css" />
+    <Content Include="Public\fonts\css\v4-font-face.css" />
+    <Content Include="Public\fonts\css\v4-font-face.min.css" />
+    <Content Include="Public\fonts\css\v4-shims.css" />
+    <Content Include="Public\fonts\css\v4-shims.min.css" />
+    <Content Include="Public\fonts\css\v5-font-face.css" />
+    <Content Include="Public\fonts\css\v5-font-face.min.css" />
+    <Content Include="Public\images\pucp.png" />
+    <Content Include="Public\js\bootstrap.bundle.js" />
+    <Content Include="Public\js\bootstrap.bundle.min.js" />
+    <Content Include="Public\js\bootstrap.esm.js" />
+    <Content Include="Public\js\bootstrap.esm.min.js" />
+    <Content Include="Public\js\bootstrap.js" />
+    <Content Include="Public\js\bootstrap.min.js" />
+    <None Include="Public\js\jquery-3.7.1.intellisense.js" />
+    <Content Include="Public\js\jquery-3.7.1.js" />
+    <Content Include="Public\js\jquery-3.7.1.min.js" />
+    <Content Include="Public\js\jquery-3.7.1.slim.js" />
+    <Content Include="Public\js\jquery-3.7.1.slim.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -212,6 +259,38 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <Content Include="Public\css\bootstrap-grid.css.map" />
+    <Content Include="Public\css\bootstrap-grid.min.css.map" />
+    <Content Include="Public\css\bootstrap-grid.rtl.css.map" />
+    <Content Include="Public\css\bootstrap-grid.rtl.min.css.map" />
+    <Content Include="Public\css\bootstrap-reboot.css.map" />
+    <Content Include="Public\css\bootstrap-reboot.min.css.map" />
+    <Content Include="Public\css\bootstrap-reboot.rtl.css.map" />
+    <Content Include="Public\css\bootstrap-reboot.rtl.min.css.map" />
+    <Content Include="Public\css\bootstrap-utilities.css.map" />
+    <Content Include="Public\css\bootstrap-utilities.min.css.map" />
+    <Content Include="Public\css\bootstrap-utilities.rtl.css.map" />
+    <Content Include="Public\css\bootstrap-utilities.rtl.min.css.map" />
+    <Content Include="Public\css\bootstrap.css.map" />
+    <Content Include="Public\css\bootstrap.min.css.map" />
+    <Content Include="Public\css\bootstrap.rtl.css.map" />
+    <Content Include="Public\css\bootstrap.rtl.min.css.map" />
+    <Content Include="Public\fonts\webfonts\fa-brands-400.ttf" />
+    <Content Include="Public\fonts\webfonts\fa-brands-400.woff2" />
+    <Content Include="Public\fonts\webfonts\fa-regular-400.ttf" />
+    <Content Include="Public\fonts\webfonts\fa-regular-400.woff2" />
+    <Content Include="Public\fonts\webfonts\fa-solid-900.ttf" />
+    <Content Include="Public\fonts\webfonts\fa-solid-900.woff2" />
+    <Content Include="Public\fonts\webfonts\fa-v4compatibility.ttf" />
+    <Content Include="Public\fonts\webfonts\fa-v4compatibility.woff2" />
+    <Content Include="Public\js\bootstrap.bundle.js.map" />
+    <Content Include="Public\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Public\js\bootstrap.esm.js.map" />
+    <Content Include="Public\js\bootstrap.esm.min.js.map" />
+    <Content Include="Public\js\bootstrap.js.map" />
+    <Content Include="Public\js\bootstrap.min.js.map" />
+    <Content Include="Public\js\jquery-3.7.1.min.map" />
+    <Content Include="Public\js\jquery-3.7.1.slim.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
