--- a/Frutilla/FrutillaWS/pom.xml
+++ b/Frutilla/FrutillaWS/pom.xml
@@ -24,7 +24,6 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
-        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>FrutillaDominio</artifactId>
@@ -34,6 +33,12 @@
             <groupId>pe.edu.pucp.frutilla</groupId>
             <artifactId>FrutillaLogicaNegocio</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
