--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
@@ -186,8 +186,12 @@
     <Content Include="Public\fonts\css\v4-shims.min.css" />
     <Content Include="Public\fonts\css\v5-font-face.css" />
     <Content Include="Public\fonts\css\v5-font-face.min.css" />
+    <Content Include="Public\images\productosImagen.png" />
     <Content Include="Public\images\frutillaLogo.jpeg" />
+    <Content Include="Public\images\ventasImagen.png" />
+    <Content Include="Public\images\pedidosImagen.png" />
     <Content Include="Public\images\pucp.png" />
+    <Content Include="Public\images\empleadosImagen.png" />
     <Content Include="Public\js\bootstrap.bundle.js" />
     <Content Include="Public\js\bootstrap.bundle.min.js" />
     <Content Include="Public\js\bootstrap.esm.js" />
