--- a/Frutilla/FrutillaWS/pom.xml
+++ b/Frutilla/FrutillaWS/pom.xml
@@ -18,6 +18,7 @@
     </properties>
     
     <dependencies>
+        
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
@@ -40,6 +41,14 @@
             <version>2.3</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>FrutillaPersistencia</artifactId>
+            <version>${project.version}</version>
+        
+        
+            </dependency>
+            
     </dependencies>
     
     <build>
