--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -23,6 +23,7 @@
         <binding name="ClienteWSPortBinding" />
         <binding name="LocalWSPortBinding" />
         <binding name="EmpleadoWSPortBinding" />
+        <binding name="PedidoWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -41,6 +42,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/EmpleadoWS"
         binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
         contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/PedidoWS"
+        binding="basicHttpBinding" bindingConfiguration="PedidoWSPortBinding"
+        contract="PedidoWS.PedidoWS" name="PedidoWSPort" />
     </client>
   </system.serviceModel>
   <system.codedom>
